7903790: Use source instead of release option for library compilation
Reviewed-by: jjg